--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@types/geoip-lite": "^1.4.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
   },
