--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@prisma/client": "^5.12.1",
     "@types/geoip-lite": "^1.4.4",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "geoip-lite": "^1.4.10",
+    "iso-3166-1": "^2.1.1",
+    "iso-3166-2": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
   },
